--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -335,14 +335,14 @@ config TOUCHSCREEN_GOODIX
 	  module will be called goodix.
 
 config TOUCHSCREEN_ILI210X
-	tristate "Ilitek ILI210X based touchscreen"
+	tristate "Ilitek ILI21XX based touchscreen"
 	depends on I2C
 	help
-	  Say Y here if you have a ILI210X based touchscreen
+	  Say Y here if you have a ILI21XX based touchscreen
 	  controller. This driver supports models ILI2102,
-	  ILI2102s, ILI2103, ILI2103s and ILI2105.
+	  ILI2102s, ILI2103, ILI2103s, ILI2105 and ILI2116.
 	  Such kind of chipsets can be found in Amazon Kindle Fire
-	  touchscreens.
+	  touchscreens or URT UMSH-8596MD-36T display.
 
 	  If unsure, say N.
 
@@ -629,7 +629,7 @@ config TOUCHSCREEN_ESMT
 	  you can select either version or both to be built as a module.
 
 config TOUCHSCREEN_ST1633I
-	tristate "Sitronix st1633i i2c touchscreen (from URT UMSH-8596MD display)"
+	tristate "Sitronix ST1633i i2c touchscreen (from URT UMSH-8596MD-35T display)"
 	depends on I2C
 	help
 	  To use a Sitronix st1633i touchscreen, say Y.
