Add support for ILI21XX and ST1633I touch on F&S platforms
Enable CONFIG_TOUCHSCREEN_ILI210X and CONFIG_TOUCHSCREEN_ST1633I in
fsimx6_defconfig, fsimx6sx_defconfig and fsimx6ul_defconfig.

Add settings for these two touch screens to the following device trees:

- armstonea9dl.dts, armstonea9q.dts, armstonea9qdl.dtsi
- armstonea9r2dl.dts, armstonea9r2q.dts, armstonea9r2qdl.dtsi
- efusa7ul.dts
- efusa9dl.dts, efusa9q.dts, efusa9qdl.dtsi
- efusa9x.dts
- netdcua9dl.dts, netdcua9q.dts, netdcua9qdl.dtsi
- picomoda9dl.dts, picomoda9q.dts, picomoda9qdl.dtsi

--- a/arch/arm/boot/dts/armstonea9r2dl.dts
+++ b/arch/arm/boot/dts/armstonea9r2dl.dts
@@ -116,12 +116,16 @@ wvga {					\
  * - 4-wire/5-wire analog resistive touch (SX8655), on Touch Connector
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
+ * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
+ * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
  *
  * Select none if you do not need touch support.
  */
 //#define CONFIG_ARMSTONEA9R2_4WTOUCH_SX8655
 #define CONFIG_ARMSTONEA9R2_CAPTOUCH_MXT224
 //#define CONFIG_ARMSTONEA9R2_CAPTOUCH_FT5x06
+//#define CONFIG_ARMSTONEA9R2_CAPTOUCH_SITRONIX
+//#define CONFIG_ARMSTONEA9R2_CAPTOUCH_ILINK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
 #define CONFIG_ARMSTONEA9R2_CMA_SIZE	0x14000000
