--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -660,6 +660,29 @@
 		atmel,reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
 	};
 #endif
+
+#ifdef CONFIG_ARMSTONEA9_CAPTOUCH_SITRONIX
+	/* Sitronix PCAP touch on Touch-Connector (I2C) */
+	st1633i@48 {
+		compatible = "sitronix";
+		reg = <0x48>;
+		swap-xy;
+		interrupt-parent = <&gpio1>;
+		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
+	};
+#endif
+
+#ifdef CONFIG_ARMSTONEA9_CAPTOUCH_ILINK
+	/* Ilink PCAP touch on Touch-Connector (I2C) */
+	ili210x@41 {
+		compatible = "Ilink,ili210x";
+		reg = <0x41>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
+	};
+#endif
 };
 #endif /* CONFIG_ARMSTONEA9R2_I2C_B */
 
