--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -51,6 +51,8 @@ wvga {					\
  * - 4-wire/5-wire analog resistive touch, touch controller on RGB LCD adapter
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
+ * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
+ * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
  *
  * On efusA7UL, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -59,6 +61,8 @@ wvga {					\
 #define CONFIG_EFUSA7UL_4WTOUCH_SX8655_RGBADAPTER
 //#define CONFIG_EFUSA7UL_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA7UL_CAPTOUCH_FT5x06
+//#define CONFIG_EFUSA7UL_CAPTOUCH_SITRONIX
+//#define CONFIG_EFUSA7UL_CAPTOUCH_ILINK
 
 /* CMA: Set 64 MB for Continuous Memory Allocator */
 #define CONFIG_EFUSA7UL_CMA_SIZE 0x4000000
@@ -577,6 +581,27 @@ wvga {					\
 		vdd = <&reg_atmel_mxt_vdd>;
 		avdd = <&reg_atmel_mxt_avdd>;
 #endif
+	};
+#endif
+
+#ifdef CONFIG_EFUSA9X_CAPTOUCH_SITRONIX
+	/* Sitronix PCAP touch on Touch-Connector (I2C) */
+	st1633i@48 {
+		compatible = "sitronix";
+		reg = <0x48>;
+		swap-xy;
+		interrupt-parent = <&gpio5>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+	};
+#endif
+
+#ifdef CONFIG_EFUSA9X_CAPTOUCH_ILINK
+	/* Ilink PCAP touch on Touch-Connector (I2C) */
+	ili210x@41 {
+		compatible = "Ilink,ili210x";
+		reg = <0x41>;
+		interrupt-parent = <&gpio5>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
 	};
 #endif
 };
