--- a/arch/arm/boot/dts/efusa9x.dts
+++ b/arch/arm/boot/dts/efusa9x.dts
@@ -85,6 +85,8 @@ lvds_wvga {				\
  * - 4-wire/5-wire analog resistive touch, touch controller on RGB LCD adapter
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
+ * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
+ * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
  *
  * On efusA9X, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -93,6 +95,8 @@ lvds_wvga {				\
 #define CONFIG_EFUSA9X_4WTOUCH_SX8655_RGBADAPTER
 //#define CONFIG_EFUSA9X_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA9X_CAPTOUCH_FT5x06
+//#define CONFIG_EFUSA9X_CAPTOUCH_SITRONIX
+//#define CONFIG_EFUSA9X_CAPTOUCH_ILINK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
 #define CONFIG_EFUSA9X_CMA_SIZE 0x14000000
@@ -612,6 +616,30 @@ lvds_wvga {				\
 		/*pinctrl-0 = <&pinctrl_touchscreen>;*/
 		interrupt-parent = <&gpio7>;
 		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+	};
+#endif
+
+
+#ifdef CONFIG_EFUSA9X_CAPTOUCH_SITRONIX
+	/* Sitronix PCAP touch on Touch-Connector (I2C) */
+	st1633i@48 {
+		compatible = "sitronix";
+		reg = <0x48>;
+		swap-xy;
+		interrupt-parent = <&gpio7>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio3 21 GPIO_ACTIVE_LOW>;
+	};
+#endif
+
+#ifdef CONFIG_EFUSA9X_CAPTOUCH_ILINK
+	/* Ilink PCAP touch on Touch-Connector (I2C) */
+	ili210x@41 {
+		compatible = "Ilink,ili210x";
+		reg = <0x41>;
+		interrupt-parent = <&gpio7>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio3 21 GPIO_ACTIVE_LOW>;
 	};
 #endif
 
