--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -635,9 +635,32 @@
 		touchscreen-size-y = <480>;
 		threshold = <25>;
 		interrupt-parent = <&gpio1>;
-		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
-		reset-gpios = <&gpio1 29 GPIO_ACTIVE_LOW>;
+		interrupts = <7 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpios = <&gpio1 8 GPIO_ACTIVE_LOW>;
 		linux,wakeup;
+	};
+#endif
+
+#ifdef CONFIG_NETDCUA9_CAPTOUCH_SITRONIX
+	/* Sitronix PCAP touch on Touch-Connector (I2C) */
+	st1633i@48 {
+		compatible = "sitronix";
+		reg = <0x48>;
+		swap-xy;
+		interrupt-parent = <&gpio1>;
+		interrupts = <7 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio1 8 GPIO_ACTIVE_LOW>;
+	};
+#endif
+
+#ifdef CONFIG_NETDCUA9_CAPTOUCH_ILINK
+	/* Ilink PCAP touch on Touch-Connector (I2C) */
+	ili210x@41 {
+		compatible = "Ilink,ili210x";
+		reg = <0x41>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <7 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio1 8 GPIO_ACTIVE_LOW>;
 	};
 #endif
 };
