--- a/arch/arm/boot/dts/picomoda9q.dts
+++ b/arch/arm/boot/dts/picomoda9q.dts
@@ -98,6 +98,8 @@ wvga {					\
  * - 4-wire/5-wire analog resistive touch, touch controller on-board
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
+ * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
+ * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
  *
  * On PicoMODA9, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -105,6 +107,8 @@ wvga {					\
 //#define CONFIG_PICOMODA9_4WTOUCH_SX8655_ONBOARD
 #define CONFIG_PICOMODA9_CAPTOUCH_MXT224
 //#define CONFIG_PICOMODA9_CAPTOUCH_FT5x06
+//#define CONFIG_PICOMODA9_CAPTOUCH_SITRONIX
+//#define CONFIG_PICOMODA9_CAPTOUCH_ILINK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
 #define CONFIG_PICOMODA9_CMA_SIZE	0x14000000
