Set default ecc_strength to 8 on PicoMODA9
The default NAND flashes used in standard PicoMODA9 are using 64 byte OOB
area, so set default ECC strength to 8, not to 40. 40 can only be set
if NAND flash uses 224 bytes OOB area.

Update ecc_strength in node bdinfo and fus,ecc_strength in node gpmi.

Newer U-Boot versions will set this value on the fly when booting the
board, if these entries are not set at all. So to have best results,
both entries should be omitted completely. However to avoid problems
with older U-Boot versions, we will not drop these entries before the
next major release.

--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -284,7 +284,8 @@
 	bdinfo: bdinfo {
 		compatible = "bdinfo";
 		board_name = "picomoda9";
-		ecc_strength = "40";
+		//ecc_strength = "40";
+		ecc_strength = "8";
 	};
 
 #if defined(CONFIG_PICOMODA9_HDMI) && !defined(CONFIG_PICOMODA9_LCD)
@@ -777,8 +778,8 @@
 	pinctrl-0 = <&pinctrl_gpmi_nand_1>;
 	fus,skipblocks = <2>;
 	fus,chunk1k;
-	//fus,ecc_strength = <8>; 	/* Spare area 64 bytes */
-	fus,ecc_strength = <40>;	/* Spare area 224 bytes i.MX6 */
+	fus,ecc_strength = <8>; 	/* Spare area 64 bytes */
+	//fus,ecc_strength = <40>;	/* Spare area 224 bytes i.MX6 */
 	status = "okay";
 };
 #endif
