--- a/arch/arm/boot/dts/gar1.dts
+++ b/arch/arm/boot/dts/gar1.dts
@@ -28,6 +28,10 @@
 	model = "F&S GAR1";
 	compatible = "fsl,imx6ul-gar1", "fsl,imx6ul";
 
+	aliases {
+		ethernet1 = &fec1;
+		ethernet0 = &fec2;
+	};
 #if 0
 	chosen {
 		stdout-path = &uart1;
@@ -125,23 +129,6 @@
 	phy-supply = <&reg_vref_3v3>;
 	fsl,ref-clock-out;
 	status = "okay";
-
-	mdio {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		ethphy0: ethernet-phy@1 {
-			compatible = "ethernet-phy-ieee802.3-c22";
-			reg = <1>;
-		};
-
-#ifdef CONFIG_GAR1_ETH1
-		ethphy1: ethernet-phy@17 {
-			compatible = "ethernet-phy-ieee802.3-c22";
-			reg = <17>;
-		};
-#endif
-	};
 };
 #endif /* CONFIG_GAR1_ETH0 */
 
@@ -157,6 +144,21 @@
 	phy-supply = <&reg_vref_3v3>;
 	fsl,ref-clock-out;
 	status = "okay";
+
+	mdio {
+		#address-cells = <1>;
+		#size-cells = <0>;
+#ifdef CONFIG_GAR1_ETH0
+		ethphy0: ethernet-phy@1 {
+			compatible = "ethernet-phy-ieee802.3-c22";
+			reg = <1>;
+		};
+#endif
+		ethphy1: ethernet-phy@17 {
+			compatible = "ethernet-phy-ieee802.3-c22";
+			reg = <17>;
+		};
+	};
 };
 #endif /* CONFIG_GAR1_ETH1 */
 
@@ -295,9 +297,6 @@
 #ifdef CONFIG_GAR1_ETH0
 		pinctrl_enet1: enet1grp {
 			fsl,pins = <
-				/* MDIO */
-				MX6UL_PAD_GPIO1_IO07__ENET1_MDC		0x1b0b0
-				MX6UL_PAD_GPIO1_IO06__ENET1_MDIO	0x1b829
 				/* FEC1 */
 				MX6UL_PAD_ENET1_RX_EN__ENET1_RX_EN	0x1b0b0
 				MX6UL_PAD_ENET1_RX_ER__ENET1_RX_ER	0x1b0b0
@@ -316,6 +315,9 @@
 #ifdef CONFIG_GAR1_ETH1
 		pinctrl_enet2: enet2grp {
 			fsl,pins = <
+				/* MDIO */
+				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x1b0b0
+				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x1b829
 				/* FEC2 */
 				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x1b0b0
 				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x1b0b0
