--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -738,20 +738,22 @@ wvga {					\
 				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09	0x17059
 
 				/* I2C_A IRQ (ext. touch, etc.) */
-				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x80000000
-
-				/* I2C_A Reset (ext. touch, etc.) */
-				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02	0x80000000
+				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0xb0b0
 
 				/* I2C_B IRQ (ext. touch, etc.) */
-				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01	0x80000000
+				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01	0xb0b0
+
+				/* I2C_A Reset (ext. touch, etc.) */
+				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02	0xb0b0
+
 				/* I2C_B Reset (ext. touch, etc.) */
-				MX6UL_PAD_SNVS_TAMPER3__GPIO5_IO03	0x80000000
+				MX6UL_PAD_SNVS_TAMPER3__GPIO5_IO03	0xb0b0
 
 				/* VLCD */
-				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04	0x80000000
+				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04	0x30b0
+
 				/* VCFL */
-				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05	0x80000000
+				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05	0x30b0
 			>;
 		};
 
@@ -996,24 +998,24 @@ wvga {					\
 		pinctrl_ecspi1: ecspi1grp {
 			fsl,pins = <
 				MX6UL_PAD_CSI_DATA04__ECSPI1_SCLK	0x100b1
-				MX6UL_PAD_CSI_DATA05__GPIO4_IO26	0x80000000
+				MX6UL_PAD_CSI_DATA05__GPIO4_IO26	0x1b0b0
 				MX6UL_PAD_CSI_DATA06__ECSPI1_MOSI	0x100b1
 				MX6UL_PAD_CSI_DATA07__ECSPI1_MISO	0x100b1
 
 				/* IRQ */
-				MX6UL_PAD_SNVS_TAMPER6__GPIO5_IO06	0x80000000
+				MX6UL_PAD_SNVS_TAMPER6__GPIO5_IO06	0xb0b0
 			>;
 		};
 
 		pinctrl_ecspi2: ecspi2grp {
 			fsl,pins = <
 				MX6UL_PAD_UART4_TX_DATA__ECSPI2_SCLK	0x100b1
-				MX6UL_PAD_UART4_RX_DATA__GPIO1_IO29	0x80000000
+				MX6UL_PAD_UART4_RX_DATA__GPIO1_IO29	0x1b0b0
 				MX6UL_PAD_UART5_TX_DATA__ECSPI2_MOSI	0x100b1
 				MX6UL_PAD_UART5_RX_DATA__ECSPI2_MISO	0x100b1
 
 				/* IRQ */
-				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07	0x80000000
+				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07	0xb0b0
 			>;
 		};
 
