--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -1012,7 +1012,7 @@
 				MX6QDL_PAD_GPIO_19__GPIO4_IO05		0x80000000
 
 				/* IRQn ext. touch */
-				MX6QDL_PAD_EIM_EB0__GPIO2_IO28		0x80000000
+				MX6QDL_PAD_EIM_EB0__GPIO2_IO28		0x30b0
 
 				/* RTC_IRQ */
 				MX6QDL_PAD_GPIO_6__GPIO1_IO06		0xb0b0
@@ -1023,13 +1023,14 @@
 				/* USB PWR_2 (If OTG is used as HOST) */
 				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x30b0
 
-				MX6QDL_PAD_EIM_LBA__GPIO2_IO27		0x80000000
-				MX6QDL_PAD_EIM_WAIT__GPIO5_IO00		0x80000000
-				MX6QDL_PAD_EIM_EB1__GPIO2_IO29		0x80000000
+				MX6QDL_PAD_EIM_LBA__GPIO2_IO27		0x30b0
+				MX6QDL_PAD_EIM_WAIT__GPIO5_IO00		0x30b0
+				MX6QDL_PAD_EIM_EB1__GPIO2_IO29		0x30b0
 				MX6QDL_PAD_DISP0_DAT18__GPIO5_IO12	0x80000000
-				MX6QDL_PAD_EIM_BCLK__GPIO6_IO31		0x80000000
+				MX6QDL_PAD_EIM_BCLK__GPIO6_IO31		0x30b0
+
 				/* HDMI HP_H optional */
-				MX6QDL_PAD_EIM_A20__GPIO2_IO18		0x80000000
+				MX6QDL_PAD_EIM_A20__GPIO2_IO18		0x30b0
 			>;
 		};
 
@@ -1343,17 +1344,17 @@
 #if 0
 		pinctrl_compact_flash: compact-flash-cardgrp {
 			fsl,pins = <
-				MX6QDL_PAD_EIM_OE__GPIO2_IO25		0x80000000
-				MX6QDL_PAD_EIM_RW__GPIO2_IO26		0x80000000
-				MX6QDL_PAD_EIM_CS0__GPIO2_IO23		0x80000000
-				MX6QDL_PAD_EIM_CS1__GPIO2_IO24		0x80000000
-				MX6QDL_PAD_EIM_EB2__GPIO2_IO30		0x80000000
-				MX6QDL_PAD_EIM_EB3__GPIO2_IO31		0x80000000
-				MX6QDL_PAD_EIM_DA11__GPIO3_IO11		0x80000000
-				MX6QDL_PAD_EIM_DA12__GPIO3_IO12		0x80000000
-				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x80000000
-				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0x80000000
-				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x80000000
+				MX6QDL_PAD_EIM_OE__GPIO2_IO25		0x30b0
+				MX6QDL_PAD_EIM_RW__GPIO2_IO26		0x30b0
+				MX6QDL_PAD_EIM_CS0__GPIO2_IO23		0x30b0
+				MX6QDL_PAD_EIM_CS1__GPIO2_IO24		0x30b0
+				MX6QDL_PAD_EIM_EB2__GPIO2_IO30		0x30b0
+				MX6QDL_PAD_EIM_EB3__GPIO2_IO31		0x30b0
+				MX6QDL_PAD_EIM_DA11__GPIO3_IO11		0x30b0
+				MX6QDL_PAD_EIM_DA12__GPIO3_IO12		0x30b0
+				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x30b0
+				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0x30b0
+				MX6QDL_PAD_EIM_DA15__GPIO3_IO15		0x30b0
 			>;
 		};
 		pinctrlxmdata: xmdatagrp {
