--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -1324,7 +1324,7 @@
 		pinctrl_ecspi2_cs: ecspi2cs {
 			fsl,pins = <
 				/* ECSPI2_SS0 - slave (chip) select 0 */
-				MX6QDL_PAD_EIM_RW__GPIO2_IO26		0x80000000
+				MX6QDL_PAD_EIM_RW__GPIO2_IO26		0x1b0b0
 			>;
 		};
 #endif /* CONFIG_ARMSTONEA9_SPI_A */
