Implement DEFAULT button on Cube2.0
The DFEAULT button was missing from the Cube2.0 device tree. Add
using gpio-keys driver, the key sends KEY_SETUP keycode when pressed.

--- a/arch/arm/boot/dts/cube2.0.dts
+++ b/arch/arm/boot/dts/cube2.0.dts
@@ -96,6 +96,19 @@
 
 	};
 
+	/* DEFAULT key */
+	gpio_keys {
+		compatible = "gpio-keys";
+ 		#address-cells = <1>;
+		#size-cells = <0>;
+
+		defaultkey {
+			label = "DEFAULT key";
+			linux,code = <KEY_SETUP>;
+			gpios = <&gpio1 24 GPIO_ACTIVE_LOW>;
+		};
+	};
+
 	/* F&S board information */
 	bdinfo {
 		compatible = "bdinfo";
@@ -223,6 +236,9 @@
 
 				/* BT_EN */
 				MX6UL_PAD_LCD_DATA09__GPIO3_IO14	0x3020
+
+				/* DEFAULT key */
+				MX6UL_PAD_UART3_TX_DATA__GPIO1_IO24	0xF020
 			>;
 		};
 
