Add support for QBlissA9
Makefile:
        - add device tree qblissa9dl and qblissa9q to be build by
fsimx6_defconfig

qblissa9dl and qblissa9q device tree settings:
    - GPMI for NAND flash with F&S NAND driver and F&S APBH DMA
      driver
    - LVDS with 800x480 resolution (WVGA)
    - HDMI and HDMI audio register access with i2c6
    - v4l2_out for video overlays
             v4l2_cap_0 for serial camera interface
    - Audio with WM9715
    - Ethernet: 1GBit/s via RGMII
    - Serial ports on UART1 (port A), UART2 (port B), UART3 (port C)
      and UART5 (port E)
    - can1
    - PCI
    - USB Device and USB Host
    - USDHC3 micro SD card
    - I2C1 (port C) ADC
    - I2C2 (port B) rtc (pca8565)
    - I2C3 (port A) MXT224 (pcap touch), sx8654 (res. touch),
      FT5x06 (pcap touch)
    - ECSPI1 for SPI-flash, ECSPI2 for user defined SPI
    	  (spidev)
            - User PWM on PWM1 and PWM4
            - PWM backlight on PWM3 for backlight connector

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -289,6 +289,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	efusa9dl.dtb \
 	armstonea9dl.dtb \
 	armstonea9r2dl.dtb \
+	qblissa9dl.dtb \
 	imx6dl-wandboard-revb1.dtb \
 	imx6q-arm2.dtb \
 	imx6q-pop-arm2.dtb \
@@ -340,6 +341,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	efusa9q.dtb \
 	armstonea9q.dtb \
 	armstonea9r2q.dtb \
+	qblissa9q.dtb \
 	imx6q-wandboard-revb1.dtb
 dtb-$(CONFIG_SOC_IMX6SL) += \
 	imx6sl-evk.dtb \
